--- a/index.html
+++ b/index.html
@@ -70,17 +70,19 @@
         <p class="footer__author">&copy; 2023 Чалаев Эмиль</p>
       </footer>
 
-      <div class="popup popup_disabled">
+      <div class="popup">
         <div class="popup__container">
             <button type="button" class="popup__close" aria-label="Закрыть форму"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__form">
-              <input class="popup__input popup__input-name" type="text" value="Жак-Ив Кусто" name="name">
-              <input class="popup__input popup__input-profession" type="text" value="Исследователь океана" name="profession">
+            <form class="popup__form" name="form">
+              <div class="popup__input-container">
+                <input class="popup__input popup__input_el_name" type="text" name="name">
+                <input class="popup__input popup__input_el_profession" type="text" name="profession">
+              </div>
+              <button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
             </form>
-          <button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
         </div>
       </div>
-      <script src="index.js"></script>
+      <script src="scripts/index.js"></script>
   </body>
 </html>
