--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form popup__form-profile" name="form">
               <div class="popup__input-container">
-                <input class="popup__input popup__input_el_name" type="text" name="name">
-                <input class="popup__input popup__input_el_profession" type="text" name="profession">
+                <input class="popup__input popup__input_el_name" type="text" name="name" placeholder="Имя">
+                <input class="popup__input popup__input_el_profession" type="text" name="profession" placeholder="Вид деятельности">
               </div>
               <button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
             </form>
@@ -75,7 +75,6 @@
           <button type="button" class="popup__close"></button>
         </div>
       </div>
-
       <script src="scripts/index.js"></script>
   </body>
 </html>
