--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
           <button type="button" class="popup__close"></button>
         </div>
       </div>
-      <script src="scripts/index.js"></script>
-      <script src="scripts/validation.js"></script>
+      <script type = 'module' src="scripts/index.js"></script>
   </body>
 </html>
