--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mesto</title>
-    <link rel="stylesheet" href="pages/index.css">
   </head>
   <body class="page">
       <header class="header">
-        <img class="header__logo" src="images/header__logo.svg" alt="логотип">
+        <img class="header__logo" src="src/images/header__logo.svg" alt="логотип">
       </header>
       <main class="main">
         <section class="profile">
-          <img class="profile__avatar" src="images/profile__avatar.png" alt="Аватар пользователя">
+          <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар пользователя">
           <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
               <button class="profile__edit-button" title="Редактировать профиль" type="button"></button>
@@ -79,6 +78,5 @@
           <button type="button" class="popup__close"></button>
         </div>
       </div>
-      <script type = 'module' src="scripts/index.js"></script>
   </body>
 </html>
