--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
   </head>
   <body class="page">
       <header class="header">
-        <img class="header__logo" src="src/images/header__logo.svg" alt="логотип">
+        <img class="header__logo" src='<%=require("./images/header__logo.svg")%>' alt="логотип">
       </header>
       <main class="main">
         <section class="profile">
-          <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар пользователя">
+          <img class="profile__avatar" src='<%=require("./images/profile__avatar.png")%>' alt="Аватар пользователя">
           <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
               <button class="profile__edit-button" title="Редактировать профиль" type="button"></button>
