--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       </header>
       <main class="main">
         <section class="profile">
-          <img class="profile__avatar" src='<%=require("./images/profile__avatar.png")%>' alt="Аватар пользователя">
+          <div class="profile__avatar"></div>
           <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
               <button class="profile__edit-button" title="Редактировать профиль" type="button"></button>
@@ -27,7 +27,10 @@
               <img class="card__image" alt="Фото">
               <div class="card__info">
                 <h2 class="card__title"></h2>
-                <button class="card__like-button" type="button" title="Нравится"></button>
+                <div class="card__like-container">
+                  <button class="card__like-button" type="button" title="Нравится"></button>
+                  <p class="card__like-number">0</p>
+                </div>
               </div>
               <button class="card__delete-button" aria-label="Удалить."></button>
             </div>
@@ -78,5 +81,25 @@
           <button type="button" class="popup__close"></button>
         </div>
       </div>
+
+        <div class="popup popup_type_delete-card">
+          <div class="popup__container popup__container_type_delete-card">
+              <h2 class="popup__title">Вы уверены?</h2>
+              <button type="submit" class="popup__submit">Да</button>
+              <button type="button" class="popup__close"></button>
+          </div>
+        </div>
+
+        <div class="popup popup_type_avatar">
+          <div class="popup__container">
+            <h2 class="popup__title">Обновить аватар</h2>
+              <form class="popup__form popup__form_type_avatar" name="popup-form-avatar" novalidate>
+                <input type="url" placeholder="Ссылка на изображение" id="input-avatar-link" class="popup__input popup__input_el_avatar-url" name="input-description" value="" required>
+                <span class="input-avatar-link-error">Необходимо заполнить данное поле</span>
+                <button type="submit" class="popup__submit">Сохранить</button>
+              </form>
+            <button type="button" class="popup__close"></button>
+          </div>
+        </div>
   </body>
 </html>
